--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Outline&family=Monoton&family=Montserrat&family=Oswald&display=swap" rel="stylesheet">
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Cheat Sheets!</title>
+    <title>Sure Sheets</title>
   </head>
   <body>
 
